LOG New version 2.8.1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "48411-rootactions_servicemenu_2.7.3.tar.gz": b0c6f05a52c285855217d932149045a49e68b26a
+  48411-rootactions_servicemenu_2.8.1.tar.gz: 98af5a95a5072c9712ca6f1b47b89e3b7d94866f
